tests/fixtures/invalid/array_designator_out_of_bounds.c
int main(void) {
    int values[3] = {[3] = 1};
    return values[0];
}
